syntax = "proto3";
package storage_service;

import "conntrack-types/conntrack.proto";

message StorageRequest {
    repeated conntrack.ConnectionStorageEntry connection_entries = 1;
};
message StorageReply {};

service StorageService {
    rpc store(StorageRequest) returns (StorageReply);
};
